--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
 }
 
 .card-zoom {
-  @apply relative flex items-center justify-center m-3 overflow-hidden shadow-xl w-72 h-60 rounded-xl;
+  @apply relative flex items-center justify-center m-3 overflow-hidden shadow-xl w-[24rem] h-[28rem] rounded-xl;
 }
 .card-zoom-image {
   @apply absolute w-full h-full transition-all duration-500 ease-in-out transform bg-center bg-cover;
