--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #1f2937;
+}
+
 .card-custom {
   @apply overflow-hidden shadow-xl rounded-xl;
 }
